--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -44,8 +44,8 @@
   </style>
 </head>
 
-<body>
-  <nav class="flex z-20 fixed left-0 top-0 right-0 justify-around h-10 items-center px-20"><a
+<body class="overflow-x-hidden">
+  <nav class="flex z-20 fixed left-0 top-0 right-0 justify-around h-10 items-center md:px-20"><a
       class="brand font-bold text-2xl" href="/">Zappy</a>
     <div><a href="https://devaman.dev/" class="mx-4">Portfolio</a>
       <a href="/" class="mx-2">Profile1</a>
