--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -10,6 +10,7 @@
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;900&display=swap" rel="stylesheet">
+  <script type="application/javascript" src="/client.js"></script>
   <style>
     body{
       background-color: #f8fef8;
@@ -96,7 +97,9 @@
   <a href="https://www.behance.net/gallery/114033587/User-Profile-Page" class="text-xs">Template Link</a>
 
   </div>
+<script>
 
+</script>
 </body>
 
 </html>
