--- a/views/profile1.ejs
+++ b/views/profile1.ejs
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&amp;display=swap" rel="stylesheet">
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <script type="application/javascript" src="/client.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
   <style>
     body {
@@ -95,7 +96,7 @@
   <a href="https://dribbble.com/shots/15276067-Fitness-Goals" class="text-xs">Template Link</a>
 
     </div>
-
+    <button onclick="onBtnclick();">Get notif</button>
   
   </div>
 </body>
